docs: document the three transport lanes (simulator / reader / device)
Adds references/transport-lanes.md and wires it into the dev-cycle + javacard-rpc-family sections: the same generated client swaps its APDUTransport to run against jCardSim (TCPTransport), a real card in a reader (relux-works/jc-omnikey-transport, host JVM, no phone), or a card in a phone slot (OmapiTransport, the only OMAPI-access-control lane). The reader lane catches converter / SD-framing / card-quirk bugs right after applet development, before the human-gated phone lane.